sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/Ag_Sales_Followup__c.object-meta.xml
<CustomObject>
    <label>Ag Sales Followup</label>
    <nameField>
        <label>Ag Sales Followup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ag Sales Followup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>