sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <formula>&quot;Assigned to: &quot; &amp; Employee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To</label>
    <type>Text</type>
</CustomField>