sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>