sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Date_Actioned__c.field-meta.xml
<CustomField>
    <fullName>Date_Actioned__c</fullName>
    <label>Date Actioned</label>
    <type>Date</type>
</CustomField>