sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Ag Sales Followup</relationshipLabel>
    <relationshipName>Ag_Sales_Followup</relationshipName>
    <type>Lookup</type>
</CustomField>