sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Follow_Up_Task__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Task__c</fullName>
    <label>Follow Up Task</label>
    <length>50</length>
    <type>Text</type>
</CustomField>