sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Followup_Comments__c.field-meta.xml
<CustomField>
    <fullName>Followup_Comments__c</fullName>
    <label>Followup Comments</label>
    <type>TextArea</type>
</CustomField>