sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/GPS_Coords__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coords__c</fullName>
    <label>GPS Coords</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>