sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>IMAGE(&#39;http://maps.googleapis.com/maps/api/staticmap?center=&#39;+TEXT(GPS_Coords__Latitude__s)+&#39; , &#39;+TEXT( GPS_Coords__Longitude__s)+&#39;&amp;zoom=16&amp;size=400x400&amp;markers=color:red%7Clabel:A%7C&#39;+TEXT( GPS_Coords__Latitude__s )+&#39;,&#39;+TEXT(GPS_Coords__Longitude__s), &#39;Example Title&#39;, 400, 400 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>