sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/NPS_Rating__c.field-meta.xml
<CustomField>
    <fullName>NPS_Rating__c</fullName>
    <label>NPS Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>