sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Opportunity_FollowUp_Complete__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_FollowUp_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if no more followups planned</description>
    <inlineHelpText>Check if no more followups planned</inlineHelpText>
    <label>Opportunity FollowUp Complete</label>
    <type>Checkbox</type>
</CustomField>