sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Opportunity_Followups_Complete__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Followups_Complete__c</fullName>
    <formula>Opportunity_Name__r.Ag_Sales_Followup_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Followups Complete</label>
    <type>Checkbox</type>
</CustomField>