sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordType.Name</field>
            <operation>startsWith</operation>
            <value>Agricultural</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ag Sales Followup</relationshipLabel>
    <relationshipName>Ag_Sales_Followup</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>