sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/OpportunityName_del__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName_del__c</fullName>
    <formula>&quot;Opportunity: &quot; &amp; Opportunity_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityName</label>
    <type>Text</type>
</CustomField>