sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <formula>IMAGE(PhotoURL__c , &#39;Example Title&#39;, 200, 200 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo</label>
    <type>Text</type>
</CustomField>