sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/PhotoURL__c.field-meta.xml
<CustomField>
    <fullName>PhotoURL__c</fullName>
    <label>PhotoURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>