sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <formula>IMAGE( Signature_URL__c, &#39;Example Title&#39;, 200, 500 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature</label>
    <type>Text</type>
</CustomField>