sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Signature_URL__c.field-meta.xml
<CustomField>
    <fullName>Signature_URL__c</fullName>
    <label>Signature URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>