sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Smiley_Score__c.field-meta.xml
<CustomField>
    <fullName>Smiley_Score__c</fullName>
    <label>Smiley Score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>