sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <description>Short task description</description>
    <inlineHelpText>Short task description</inlineHelpText>
    <label>Task</label>
    <length>50</length>
    <type>Text</type>
</CustomField>