sfSandBoxCode/force-app/main/default/objects/Ag_Sales_Followup__c/fields/Task_Display__c.field-meta.xml
<CustomField>
    <fullName>Task_Display__c</fullName>
    <formula>&quot;Planned Task: &quot; &amp;  Task__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Display</label>
    <type>Text</type>
</CustomField>